--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarToggler"></div>
+            <div class="collapse navbar-collapse" id="navbarToggler">
             <ul class="navbar-nav ms-auto mb-2 ">
               <li class="nav-item">
                 <a class="nav-link font-black " href="#about">About</a>
@@ -24,6 +24,8 @@
               <li class="nav-item">
                 <a class="nav-link font-black" href="#projects">Projects</a>
               </li>
+              </ul>
+            </div>
            </div>
         </div>
     </nav>
