--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
                 <a class="nav-link font-black " href="#about">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link font-black" href="#projects">Projects</a>
+                <a class="nav-link font-black" href="#Projects">Projects</a>
               </li>
               </ul>
             </div>
@@ -38,13 +38,13 @@
         <p> Full-stack developer </p>
         <div class ="email">sujeet@techis.io</div>
         <div class="icons">
-            <a href="#"><i class="bi bi-linkedin"></i></a>
-            <a href="#"><i class="bi bi-github"></i></a>
+            <a href="https://www.linkedin.com/in/sujeet-shivman-6540aa241/"><i class="bi bi-linkedin"></i></a>
+            <a href="https://github.com/SujeetDeor/new1"><i class="bi bi-github"></i></a>
         </div>
     </div>
 
     <div id="Projects">
-      <h2><span class="font-primary">p</span>rojects</h2>
+      <h2><span class="font-primary">P</span>rojects</h2>
       <div class="card mb-3">
         <div class="row">
           <div class="col-md-4">
